2004-12-14  Edd Dumbill <edd@usefulinc.com>

	* Updated INSTALL and manual page.

2004-12-13  Edd Dumbill <edd@usefulinc.com>

	* EntityEncoderU.py, EntityEncoder.py: remove dependency on
	xmllib, add 'coding:' magicomment.

	* churnparser.py: delete as obsoleted by churnsaxparser.py

	* dailychumptwist.py: Fix for Twisted 1.3's API.
	Reordered things so DailyChurn object is created independently of
	the protocol factories.
	
	* dailychump.py: Added a listener mechanism API so that the
	protocols can register as listeners for Churn events when they
	happen.  Define listener interface as IChumpListener.


2002-08-01  Edd Dumbill  <edd@usefulinc.com>

	* Added 'status' command which shows addressing and verbosity
	levels.

	* Added --address (-r).  Bot only responds in public if it's
	been addressed by name.

	* Added --private (-i) mode so informational and error messages are
	sent privately

	* Added --quiet (-q) mode so only error messages are reported

	* Added support for chumping ftp, irc, and news: URLs

	* Added --help and --version commands, GNU style as well as proper
	short and long getopts style handling.

	* Tidied up punctuation in what the bot says.

	* All commands work via private message as well as in public.

	* Added L:= directive for replacing a mistyped URL (L is label
	letter).

	* Merged Josh Lucas' patch for specifying passwords to an IRC
	server.

2002-02-18  Edd Dumbill  <edd@usefulinc.com>

	* Released version 1.1: support for permanent URIs for each item,
	comment editing and deletion, keywords setting

2001-07-12  Edd Dumbill  <edd@usefulinc.com>

	* src/dailychumpbot.py: added option to specify stylesheet
	(-e). Made -h display usage information.

	* src/dailychump.py: added support for stylesheets. Fixed bug
	where os.rename() attempted to rename across volumes. Had to
	subclass XMLParser in order to make it not barf on the XML
	stylesheet directive. Future TODO: move the XML handling to be
	SAX-based.

	* bumped version to 1.02
