@@ -10,9 +10,10 @@ Contents
   4. Advanced usage
   5. Addressing and verbosity modes
   6. XML and Archiving
-  7. Why the "Daily Chump"?
-  8. Chumps we know of
-  9. Credits
+  7. Fancy tricks
+  8. Why the "Daily Chump"?
+  9. Chumps we know of
+ 10. Credits
 
 1. Overview
 
@@ -33,7 +34,7 @@ Contents
   If you encounter problems and would like to get in touch with us, send
   email to <mailto:chump@heddley.com>. If any of the examples in this
   README get confusing, have a look at the original Daily Chump
-  <http://pants.heddley.com/> to see it in action.
+  <http://dailychump.org/> to see it in action.
 
   We'll do our best to help but please try hard to figure out your
   problems before contacting us.
@@ -215,26 +216,47 @@ Contents
   You will need to create XSLT stylesheets (or use your favourite XML
   styling mechanism) in order to show the world your weblog.  We used
   our own version of the Apache mod_xslt module, which is included in
-  this distribution in the extras directory. 
+  this distribution in the extras directory.  (** SEE NOTE BELOW)
 
   For help, we've included a bare bones XSLT sheet which uses both the
   main files and brings in the nav.xml file generated by
   indexFiles.py. Also included is a simple sheet to display the monthly
   indexes generated by indexFiles.py.
 
-7. Why the "Daily Chump"?
+  (**) This method was used when we first made the bot.  The best way
+  to get the XML styled now is to use the --xsl and --web options to
+  get the bot to serve styled HTML up itself.
+
+7. Fancy tricks
+
+  The 2.0 release of the Daily Chump incorporates some fancy tricks.
+
+  * WEB SERVER: by means of Quixote, the bot is now able to serve the
+  pages it creates.  See the --xsl and the --web options in the man
+  page (run man dailychump) for more details.
+
+  * UPDATE NOTIFICATION: by using the --pingurl option, you can get
+  the bot to send a notification to a web server when an XML file is
+  updated.  The filename is appended to the URL you specify.
+
+  * MAKE THE BOT CHATTY: using the --formchat option, you can create
+  a simple web form that makes the bot say things in a channel. This
+  can either be used just for fun, or to tie other programs in that
+  can cause the bot to send notifications to channel users.
+
+8. Why the "Daily Chump"?
 
   The Daily Chump bot was inspired by work done by Bijan Parsia of
   Monkeyfist <http://monkeyfist.com/DailyChurn/>.  Bijan's bot is written
   in Squeak, and called the DiaWebLogBot.  We decided to copy his good
   ideas in Python and add XML output.
 
-8. Chumps we know of
+9. Chumps we know of
 
    The list of these is growing too fast to keep up to date in this
    manual.  Instead consult <http://usefulinc.com/chump/>.
 
-9. Credits
+10. Credits
 
   Matt Biddulph did the Python programming.  Edd Dumbill did the XSLT
   and web server work, and some later Python hacking.  Giles Turnbull
