@@ -1,0 +1,7 @@
+<html>
+<body bgcolor="#ccccfe">
+<p>
+<a href="javascript:void(window.open('http://test.picdiary.com:8000/link?url='+location.href+'&title='+document.title,'','scrollbars=yes,toolbar=no,location=no,width=400,height=100'));">chump</a><br>
+</p>
+</body>
+</html>
